# TICO

./: .coveragerc  .gitignore  .lintrunner.toml  .pylintrc  LICENSE  README.md  ccex  mypy.ini  pyproject.toml  requirements-lintrunner.txt  setup.py
.ahub/tcchecker-tca/: config.yaml
.github/: actionlint.yaml
.github/workflows/: check-pr.yaml  check-workflows.yaml  publish-nightly-package.yaml  publish-official-package.yaml
docs/: design.md  requirements.md  system_test.md
infra/command/: build  configure  coverage  format  install  test
infra/dependency/: torch_dev.txt  torchvision_dev.txt
infra/scripts/: build.sh  coverage.sh  install.sh  install_requirements.txt  install_requirements_2_5.txt  install_requirements_2_6.txt  install_requirements_dev.txt  test_configure.sh  test_run.py
infra/style/: format.sh  install.sh  requirements.txt
test/: README.md  dump_exported_program.py  dump_pt2_model.py  requirements.txt  requirements_2_5.txt  requirements_2_6.txt  requirements_dev.txt  requirements_pre.txt  requirements_pre_dev.txt
test/modules/: README.md  base.py
test/performance/: README.md  __init__.py  benchmark_perf.py  requirements.txt  utils.py
test/pt2_to_circle_test/: README.md  __init__.py  builder.py  test_model.py  test_net.py  test_op.py  test_pt2_to_circle.py
test/pt2_to_qcircle_test/: __init__.py  builder.py  test_op.py
test/quantization/: quant_spec_helpers.py  test_quantizer_registry.py
test/support/: base_builders.py  helper.py  infer.py  runtime.py
test/utils/: base_builders.py  helper.py  (+3 more)
tico/: __init__.py  pt2_to_circle.py
(+898 files in other folders)
